backend/src/main/java/com/example/sap_shop/error/CategoryNotFoundException.java
package com.example.sap_shop.error;

public class CategoryNotFoundException extends Exception {
    public CategoryNotFoundException(String message) {
        super(message);
    }
}
